--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,8 @@ header {
   color: white;
   position: absolute;
   top: 50%;
-  right: 24%;
-  transform: translate(-10%, -50%);
+  right: 30%;
+  transform: translate(-30%, -50%);
 }
 
 @media only screen and (min-width: 768px) {
@@ -149,14 +149,16 @@ header {
   font-weight: 700;
   /* display: block; */
   /* border: 2px solid red; */
-  color: orange;
+  color: rgb(239, 158, 7);
   z-index: 9999999;
+  text-transform: uppercase;
 }
 
 .hero-sub-title {
   font-size: 32px;
   font-weight: 500;
   color: #d3d3d3;
+  text-transform: uppercase;
 }
 
 .hero-text-container button {
@@ -165,4 +167,30 @@ header {
   background: #ccc;
   color: #444;
   font-weight: 600;
+  text-transform: uppercase;
+}
+
+.hero-text-container p {
+  padding: 8px;
+  color: rgb(239, 158, 7);
+
+  font-weight: 400;
+  font-size: 16px;
+}
+
+/*cards section */
+
+.cards-body {
+  display: flex;
+  max-width: 1100px;
+}
+
+.card-item {
+  width: 30%;
+  max-width: 300px;
+}
+
+.card-image-container {
+  width: 100%;
+  height: 100%;
 }
