--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ header {
   justify-content: space-evenly;
   height: 15vh;
   flex-direction: column;
-  margin-top: 1em;
+  margin: 2em 0;
 }
 
 .logo-container {
@@ -62,7 +62,7 @@ header {
 
 .navigation-menu ul li a {
   text-decoration: none;
-  color: rgb(108, 108, 108);
+  color: rgb(104, 96, 96);
   font-weight: 500;
 }
 
@@ -81,8 +81,8 @@ header {
 }
 
 .search-container input {
-  border: 1px solid #333;
-  background-color: #333;
+  border: 1px solid rgb(104, 96, 96);
+  background-color: rgb(104, 96, 96);
   border-radius: 20px;
   height: 32%;
   color: white;
@@ -119,9 +119,10 @@ header {
   .navigation-menu ul li {
     margin: 0em 1em;
   }
+  header {
+    margin: 0 0;
+  }
 }
-
-/*hero banner*/
 
 /*image text overlay repeatable*/
 
@@ -135,6 +136,7 @@ header {
   width: 100%;
   object-fit: cover;
   max-height: 500px;
+  filter: brightness(0.3);
 }
 
 .hero-text-container {
@@ -142,43 +144,58 @@ header {
   top: 50%;
   left: 0;
   transform: translate(0, -50%);
-  width: 50%;
+  width: 80%;
   display: flex;
   flex-direction: column;
   padding: 0px 72px;
 }
 
 .hero-title {
-  font-size: 72px;
+  font-size: 32px;
   font-weight: 700;
-  color: rgb(239, 158, 7);
+  color: rgb(255, 204, 142);
   text-transform: uppercase;
 }
 
 .hero-sub-title {
-  font-size: 32px;
+  font-size: 18px;
   font-weight: 500;
   color: #d3d3d3;
   text-transform: uppercase;
 }
 
 .cta_btn {
-  padding: 8px;
+  padding: 12px 24px;
+  border: none;
   border-radius: 12px;
   background: #ccc;
-  color: #444;
+  color: rgb(104, 96, 96);
   font-weight: 600;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .hero-text-container p {
   padding: 8px;
-  color: rgb(239, 158, 7);
-
+  color: rgb(255, 204, 142);
   font-weight: 400;
   font-size: 16px;
 }
 
+@media only screen and (min-width: 768px) {
+  .hero-title {
+    font-size: 64px;
+  }
+  .hero-sub-title {
+    font-size: 28px;
+  }
+  .hero-text-container {
+    width: 50%;
+  }
+  .hero-text-container p {
+    font-size: 24px;
+  }
+}
 /*cards section */
 
 .cards-header {
@@ -189,7 +206,7 @@ header {
 .cards-title {
   font-size: 40px;
   font-weight: 700;
-  color: rgb(239, 158, 7);
+  color: rgb(255, 204, 142);
   text-transform: uppercase;
 }
 
@@ -201,14 +218,16 @@ header {
 .cards-body {
   display: flex;
   justify-content: space-evenly;
+  flex-direction: column;
   width: 100%;
   max-width: 1100px;
   margin: 0 auto;
 }
 
 .card-item {
-  width: 25%;
-  max-width: 300px;
+  width: 90%;
+  margin: 1em auto;
+  transition: all 0.2s ease-out;
 }
 
 .card-image-container {
@@ -231,7 +250,7 @@ header {
 }
 
 .card-description {
-  background: #847e7a;
+  background: rgb(104, 96, 96);
   color: #fff;
   padding: 16px;
 }
@@ -245,14 +264,47 @@ header {
   display: block;
 }
 
+.card-active {
+  border: 2px solid rgb(104, 96, 96);
+  transform: scale(1.11);
+}
+
+@media only screen and (min-width: 768px) {
+  .cards-body {
+    flex-direction: row;
+  }
+
+  .card-item {
+    width: 25%;
+    max-width: 300px;
+  }
+}
+
+/* carousel section */
+
+.carousel-container {
+  width: 100%;
+  margin: 4em 0;
+}
+
+.carousel-cell {
+  /* width: 100%; */
+  margin: 0px 16px;
+}
+
+.flickity-button {
+  display: none;
+}
 /* image and text container */
 
 .image-and-text-container {
   display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
 .image-and-text-container > div {
-  width: 50%;
+  width: 100%;
 }
 
 .image-section {
@@ -283,7 +335,15 @@ header {
   font-weight: bold;
 }
 
-/*banner conatiners*/
+@media only screen and (min-width: 768px) {
+  .image-and-text-container > div {
+    width: 50%;
+  }
+  .image-and-text-container {
+    flex-direction: row;
+  }
+}
+/*banner containers*/
 
 .banner-container {
   position: relative;
@@ -292,7 +352,7 @@ header {
 .banner-container img {
   width: 100%;
   height: 700px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .banner-text {
@@ -314,7 +374,7 @@ header {
 .banner-second .banner-title {
   font-size: 40px;
   font-weight: 700;
-  color: rgb(239, 158, 7);
+  color: rgb(255, 204, 142);
 }
 
 .banner-second .banner-text {
@@ -324,31 +384,42 @@ header {
 }
 
 .banner-second .banner-text span {
-  color: rgb(108, 108, 108);
+  color: rgb(162, 162, 162);
 }
 
+.banner-second {
+  filter: blur(2px);
+  transition: all 0.2s ease-in;
+}
+
+.banner-second:hover {
+  filter: blur(0px);
+}
 /*mini paragraphs  */
 
 .mini-paragraphs {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   margin: 3em 0;
 }
 
 .mini-paragraphs .paragraph {
-  width: 25%;
+  width: 90%;
+  margin: 1em auto;
+  text-align: center;
 }
 
 .paragraph-title {
   font-size: 16px;
   font-weight: bold;
-  color: rgb(239, 158, 7);
+  color: rgb(255, 204, 142);
 }
 
 /* testiomonails section */
 .testimonial-container {
-  margin: 24px;
+  margin: 48px 0;
 }
 
 .testimonial-container img {
@@ -368,6 +439,23 @@ header {
   text-align: center;
 }
 
+/* banner third */
+.banner-third .banner-text {
+  width: 90%;
+}
+
+@media only screen and (min-width: 768px) {
+  .mini-paragraphs {
+    flex-direction: row;
+  }
+  .mini-paragraphs .paragraph {
+    width: 25%;
+    text-align: left;
+  }
+  .banner-third .banner-text {
+    width: 50%;
+  }
+}
 /*subscribe banner */
 
 .input-container {
@@ -400,8 +488,8 @@ header {
 
 .footer {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
-  padding: 32px;
   background: rgb(92, 67, 67);
   color: white;
 }
@@ -409,12 +497,18 @@ header {
 .social-icons {
   display: flex;
   font-size: 14px;
+  justify-content: center;
+  padding-top: 1em;
 }
 
 .social-icons img {
   height: 18px;
   margin: 4px 8px;
   color: white;
+  background-color: antiquewhite;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 4px;
 }
 
 .footer h3,
@@ -423,11 +517,15 @@ header {
 }
 
 .footer-information {
-  width: 40%;
+  width: 90%;
+  margin: 1em auto;
+  text-align: center;
 }
 
 .footer-section {
-  width: 20%;
+  width: 90%;
+  margin: 1em auto;
+  text-align: center;
 }
 
 .footer-section li a {
@@ -437,4 +535,39 @@ header {
 .footer-section li {
   list-style-type: none;
   white-space: nowrap;
+}
+
+@media only screen and (min-width: 768px) {
+  .footer {
+    flex-direction: row;
+    padding: 32px;
+  }
+  .footer-information {
+    width: 40%;
+    margin: 0;
+    text-align: left;
+  }
+
+  .footer-section {
+    width: 20%;
+    margin: 0;
+    text-align: left;
+  }
+
+  .footer > div {
+    padding: 0px 24px;
+  }
+
+  .footer-information > div {
+    margin: 8px 0px;
+  }
+
+  .footer-section ul,
+  .footer-section ul li {
+    margin: 8px 0px;
+  }
+  .social-icons {
+    justify-content: flex-start;
+    padding-top: 1em;
+  }
 }
