--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   padding: 0;
   margin: 0;
   font-family: "Lato", sans-serif;
+  overflow-x: hidden;
 }
 
 html {
@@ -10,8 +11,12 @@ html {
 
 body {
   /* background: #f6f6f6; */
+  overflow-x: hidden;
 }
 
+main {
+  overflow-x: hidden;
+}
 /*general*/
 
 /*header*/
